fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -163,8 +163,6 @@ h1, h2 {
   align-items: baseline;
   background-color: #1c1f4a;
   border-radius: 15px;
-  column-gap: 4.5rem;
-  /* [1] */
   display: grid;
   grid-template-columns: auto auto;
   padding: 1.5625rem 1.5rem 2.5rem 1.5rem;
