--- a/scss/components/_tracker-card.scss
+++ b/scss/components/_tracker-card.scss
@@ -34,7 +34,6 @@
    align-items: baseline;
    background-color: $card-bg-clr;
    border-radius: 15px;
-   column-gap: rem(72); /* [1] */
    display: grid;
    grid-template-columns: auto auto;
    padding: rem(25) rem(24) rem(40) rem(24); /* [1] */
